
 About VBoxVmService - Release 2.0 "Red Dragon"
------------------------------------------------------------------------------

 Contents of this file

     0. What is new in this release?

     1. What is VBoxVmService?

     2. So why did you create it?

     3. How does it work?

     4. Why is it such a dirty hack?

     5. What are the plans for the future?

     6. Which versions of Windows are supported?

     7. Will VBoxVmService run on Mac OSX or Linux?

     8. Credits




------------------------------------------------------------------------------


0. What is new in this release?

Changes since version rel20100817-win7

* Removed all the batch files and call VBoxManage.exe directly at VBoxVmService.
* Reworked some of the documentation.
* Dropped some parameters from the ini-file, please review Howto.txt for a list of currently valid options
* DO NOT USE "BRUTEFORCE" OPTION ANY MORE!!!

Changes since version rel20091210-win7

* VBOX_USER_HOME will now be set up during the installation process.
* Minor improvements on the overall code.
* Simplified the overall installation procedure.
* Reworked some of the documentation.


Changes since version rel20091103-win7

* Support for the VBOX_USER_HOME environment variable has been added.
* Hardlinking was dropped from install procedure.
* Documentation was reworked.


Changes since version rel20081010

* Windows 7 support has been added. Thanks to user FB2000 for his patches and his extensive research regarding that topic!


Changes since version rel20081009

* There have been errors while putting together the package. This Release was recalled!


Changes since version rel20080728

* Improved the event-logging to VBoxVmService.log. It will now capture the response messages from the VirtualBox components.