@@ -1,16 +1,17 @@
 [Settings]
 ServiceName=VBoxVmService
 VBOX_USER_HOME=C:\Users\YOUR_NAME_HERE\.VirtualBox
+PauseShutdown=5000
+
 [Vm0]
 VmName=ubuntu
 WorkingDir=C:\vms
 ShutdownMethod=savestate
 VrdpPort=3001
-PauseShutdown=5000
+
 [Vm1]
 VmName=winxp
 WorkingDir=C:\vms
 ShutdownMethod=savestate
 VrdpPort=3003
-PauseShutdown=5000
 
