@@ -13,18 +13,21 @@ Key / Value pair                                            Description
 [Settings]
 ServiceName=VBoxVmService                                   The service name to use for the VBoxVmService.
 VBOX_USER_HOME=C:\Users\YOUR_NAME_HERE\.VirtualBox          The actual path to your user's .VirtualBox directory. It is usually located in your users' personal folder.
+PauseShutdown=5000                                          A pause parameter to slow down the Windows shutdown process and to prevent VMs from crashing on shutdown/reboot. (5000 = 5 seconds) Note Windows has a limit to how long the service controller could wait when system reboots. The time limit is specified in the WaitToKillServiceTimeout value of the following registry key: HKEY_LOCAL_MACHINE\SYSTEM\CurrentControlSet\Control. Your PauseShutdown value should never exceed this time limit.
+
 [Vm0]
 VmName=ubuntu                                               The name of the VM to start (case sensitive!)
 WorkingDir=C:\vms                                           Usually the directory to which you unpacked VBoxVmService.
-ShutdownMethod=savestate                                    The shutdown method ("savestate", or "poweroff")
+ShutdownMethod=savestate                                    The shutdown method ("savestate", or "poweroff"). If your VM takes long time to poweroff, it's recommanded to use savestate, which could be done very quickly.
 VrdpPort=3001                                               The port setting for your VRDP-Access, choose 1 unique port per VM that you set up.
-PauseShutdown=15000                                         A pause parameter to slow down the Windows shutdown process and to prevent VMs from crashing on shutdown/reboot. (15000 = 15 seconds)
+
 [Vm1]
-VmName=winxp                                                As you can see, the above values almost repeat for every [VmX] section of the file, 
+VmName=winxp                                                As you can see, the above values almost repeat for every [VmX] section of the file. 
 WorkingDir=C:\vms
 ShutdownMethod=poweroff
 VrdpPort=3002                                               
-PauseShutdown=15000 
+
+
 
 
 
